Added Update wine method